# rust2zig

./: .gitignore  Cargo.toml  DROP.md  PLAN.md  README.md  TODO.md  build.rs  build_index.sh  coverage.md  coverage.sh  test.sh  test_ml.sh  test_test.sh
ml/closure/test/: test.ml
prompt/: 2025-04-12  2026-04-06  2026-04-13  2026-04-14  2026-05-04  2026-05-05  2026-05-05-2  2026-05-06  2026-05-06-2  2026-05-10  2026-05-10-2  2026-05-13  2026-05-20  2026-05-22  2026-05-22-2  2026-05-25  2026-05-26  2026-06-05  2026-06-05-2  2026-07-09  2026-07-24
research/: README.md  float.md  hash.md  hasher.md  isqrt.md  random.md
rust/bitset/: Cargo.toml
rust/closure/: Cargo.toml
rust/direction/: Cargo.toml
rust/div/: Cargo.toml
rust/divmod/: Cargo.toml
rust/dot/: Cargo.toml
rust/drop/: Cargo.toml
rust/drop2/: Cargo.toml
rust/gcd/: Cargo.toml
rust/geometry2/: Cargo.toml
rust/inc/: Cargo.toml
rust/iter/: Cargo.toml
rust/min/: Cargo.toml
rust/option/: Cargo.toml
rust/result/: Cargo.toml
rust/sum/: Cargo.toml
src/: lsif.rs  main.rs  scip.rs
src/ast/: zig.rs
src/desugar/: binary.rs  compound_assignment.rs  generic.rs  integer_literal.rs  match_ergonomics.rs  mod.rs
src/print/: mod.rs  zig.rs
src/translate/: call.rs  closure.rs  expr.rs  flow.rs  generic.rs  item.rs  mac.rs  mod.rs  name.rs  pat.rs  rename.rs  stmt.rs  ty.rs
zig/: bitset.zig  closure.zig  direction.zig  div.zig  divmod.zig  dot.zig  drop.zig  drop2.zig  gcd.zig  geometry.zig  geometry2.zig  inc.zig  iter.zig  min.zig  option.zig  ratio.zig  result.zig  sum.zig
(+67 files in other folders)
