[package]
name = "rust2zig"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
prost = "0.14"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full", "visit", "visit-mut"] }
toml = "1"

[build-dependencies]
prost-build = "0.14"
